@@ -4,6 +4,7 @@
 typedef struct {
   unsigned int isLibrarySource:1;
   int disable_df;
+  int no_ext_instr;
 } pic14_options_t;
 
 extern pic14_options_t pic14_options;
